<resources>
    <string name="app_name">Android Demos</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="enter_name">enter name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="button_info">Info</string>
    <string name="button_add">Add</string>
    <string name="label_latitude">Latitude</string>
    <string name="label_longitude">Longitude</string>
    <string name="label_location">Location</string>
    <string name="no_location_data">No Location Data</string>
    <string name="service_not_available">Service unavailable</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">No address found</string>
    <string name="invalid_lat_long_used">Invalid Lat/Long</string>
    <string name="demo_list_header">Washington Cities</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_recycler">Movies w/ RecyclerView</string>
    <string name="title_activity_recycler_web">Traffic Cameras (Java)</string>
    <string name="title_activity_list">Simple ListView</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_map">Locations</string>
    <string name="title_activity_fetch_address_intent_service">FetchAddressIntentService</string>
    <string name="title_movie_detail">Movie Details</string>
    <string name="title_activity_firebase">AD340 Team</string>
    <string name="saved_text_entry">text_entry</string>
    <string name="title_activity_traffic_cam_map">Traffic Cam Map</string>
    <string name="title_activity_movies1">Movies w/ ListView</string>
    <string name="title_activity_movies2">Movies w/ RecyclerView</string>
    <string name="title_activity_traffic_cam">Traffic Cameras (Kt)</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="demo_pages">Demo Pages</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
